[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/FredokaOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu/Font50.tres" type="DynamicFont" id=3]
[ext_resource path="res://Utils/outline_material.tres" type="Material" id=4]
[ext_resource path="res://UI/WeaponSlots.tscn" type="PackedScene" id=5]

[sub_resource type="Shader" id=1]

resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 outline_color : hint_color;
uniform float outline_width = 2;

void fragment() {
	vec2 ps = TEXTURE_PIXEL_SIZE;
	
	float dx = ps.x * outline_width;
	float dy = ps.y * outline_width;
	
	float hs = 0.70711; // sqrt(2) / 2
	float hx = dx * hs;
	float hy = dy * hs;
	
	float a = (
		texture(TEXTURE, UV + vec2(dx, .0)).a +
		texture(TEXTURE, UV + vec2(-dx, .0)).a +
		texture(TEXTURE, UV + vec2(.0, dy)).a +
		texture(TEXTURE, UV + vec2(.0, -dy)).a +
		
		texture(TEXTURE, UV + vec2(hx, hy)).a +
		texture(TEXTURE, UV + vec2(-hx, hy)).a +
		texture(TEXTURE, UV + vec2(hx, -hy)).a +
		texture(TEXTURE, UV + vec2(-hx, -hy)).a
	);
	
	vec4 original = texture(TEXTURE, UV);
	float blend = max(0.0, a - 7.0);
	vec4 mixed = mix(outline_color, original, blend);
	COLOR = vec4(mixed.rgb, original.a);
}"
_sections_unfolded = [ "Resource" ]

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = SubResource( 1 )
shader_param/outline_color = null
shader_param/outline_width = 2.5
_sections_unfolded = [ "Resource", "shader_param" ]

[sub_resource type="DynamicFont" id=3]

size = 94
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="HUD" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="GameOver" type="Control" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse", "Transform" ]

[node name="GameOverMessage" type="Label" parent="GameOver" index="0"]

material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -116.5
margin_right = 268.0
margin_bottom = 116.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Game Over!
P? Wins"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Material", "Mouse", "custom_fonts" ]

[node name="MainMenu" type="Button" parent="GameOver" index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -100.0
margin_right = 137.0
margin_bottom = -33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main Menu"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="P1Score" type="Label" parent="." index="1"]

material = ExtResource( 4 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 40.0
margin_right = 200.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "LScore"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "custom_fonts" ]

[node name="P2Score" type="Label" parent="." index="2"]

material = ExtResource( 4 )
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -202.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = 99.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "RScore"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Mouse", "custom_fonts" ]

[node name="P1WeaponSlots" parent="." index="3" instance=ExtResource( 5 )]

anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -720.0
margin_bottom = -20.0
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Rect", "Visibility" ]

[node name="P2WeaponSlots" parent="." index="4" instance=ExtResource( 5 )]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -720.0
margin_right = 230.0
margin_bottom = -20.0
rect_scale = Vector2( -1, 1 )
_sections_unfolded = [ "Anchor", "Margin", "Material", "Mouse", "Rect", "Visibility" ]

[node name="Message" type="Label" parent="." index="5"]

visible = false
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -800.0
margin_right = 800.0
margin_bottom = 190.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Message"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Mouse" ]

[node name="Timeout" type="Timer" parent="Message" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="pressed" from="GameOver/MainMenu" to="." method="_on_MainMenu_pressed"]

[connection signal="timeout" from="Message/Timeout" to="." method="_on_Timeout_timeout"]


